force-app/main/default/objects/custom_create112__c/custom_create112__c.object-meta.xml
<CustomObject>
    <label>Custom created object112</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects112</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>