force-app/main/default/objects/custom_create112__c/fields/custom_create_112field547__c.field-meta.xml
<CustomField>
    <fullName>custom_create_112field547__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 112field547</label>
    <type>Checkbox</type>
</CustomField>