force-app/main/default/objects/custom_create112__c/fields/custom_create_112field588__c.field-meta.xml
<CustomField>
    <fullName>custom_create_112field588__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 112field588</label>
    <type>Checkbox</type>
</CustomField>